Bug 1521053 - Ensure that the labels we use to display origin names in Trackers/Cookies subpanels are always LTR but their text alignment follows UI directionality; r=johannh
Differential Revision: https://phabricator.services.mozilla.com/D17876

UltraBlame original commit: ab2e6118d3ffe9bf066a3057b712b3418fe99a25

--- a/browser/themes/shared/controlcenter/panel.inc.css
+++ b/browser/themes/shared/controlcenter/panel.inc.css
@@ -3647,6 +3647,42 @@ flex
 :
 1
 ;
+direction
+:
+ltr
+;
+}
+.
+identity
+-
+popup
+-
+content
+-
+blocking
+-
+list
+-
+host
+-
+label
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+text
+-
+align
+:
+right
+;
 }
 .
 identity
